<resources>
    <string name="app_name">FoodSaver</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="your_panty">Your Panty</string>
    <string name="shopping_list">Shopping List</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="food_name">Food name</string>
    <string name="expires">Expires:</string>
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="shopping_item">Shopping Item</string>
    <string name="add">Add</string>
    <string name="fact">fact</string>
    <string name="welcome_to_foodsaver">Welcome to FoodSaver!</string>
    <string name="title" translatable="false">title</string>
    <string name="barcode_reader">Barcode Reader</string>
    <string name="save">Save</string>
    <string name="freezer">Freezer</string>
    <string name="fridge">Fridge</string>
    <string name="pantry">Pantry</string>
    <string name="interesting_fact">Interesting fact:</string>
</resources>
