<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:activity=".AddFoodActivity">

    <TextView
        android:id="@+id/text_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/food_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/edit_food_name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_expiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/expires"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/edit_expiration"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_food_name" />

    <TextView
        android:id="@+id/text_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/quantity"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/edit_quantity"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_expiration" />

    <TextView
        android:id="@+id/text_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:text="@string/category"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/spinner_category"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_quantity" />

    <EditText
        android:id="@+id/edit_food_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"

        android:inputType="textCapSentences"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_food_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_food_name" />


    <EditText
        android:id="@+id/edit_expiration"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_expiration"
        app:layout_constraintEnd_toStartOf="@+id/image_button_calendar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_expiration" />

    <ImageButton
        android:id="@+id/image_button_calendar"
        android:layout_width="50dp"
        android:layout_height="46dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_food_name"
        app:srcCompat="@android:drawable/ic_menu_my_calendar" />

    <EditText
        android:id="@+id/edit_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:ems="3"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/edit_units"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_quantity"
        app:layout_constraintTop_toBottomOf="@+id/edit_expiration" />

    <EditText
        android:id="@+id/edit_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="5"
        android:hint="Units"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/edit_quantity"
        app:layout_constraintTop_toBottomOf="@+id/edit_expiration" />

    <Spinner
        android:id="@+id/spinner_category"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_category"
        app:layout_constraintTop_toBottomOf="@+id/edit_quantity" />


</androidx.constraintlayout.widget.ConstraintLayout>
